Gemini呼び出し機能をリファクタ

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,18 @@ SITE_URL=http://localhost:8080
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=tabisketch
-POSTGRES_USER=postgresのユーザ名
-POSTGRES_PASSWORD=postgresのパスワード
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 
 # Mail
-GMAIL_USERNAME=Gmailのユーザ名
-GMAIL_PASSWORD=Gmailのパスワード
+GMAIL_USERNAME=tabisketch.official@gmail.com
+GMAIL_PASSWORD=dummy
 
 # Google
-GOOGLE_MAPS_API_KEY=GoogleMapApiキー
+GOOGLE_APPLICATION_CREDENTIALS=.credentials/dummy.json
+GOOGLE_MAPS_API_KEY=dummy
 
 # Gemini
-GEMINI_API_URL=GeminiAIApiのURL
-GEMINI_API_KEY=GeminiAIApiキー
+GEMINI_PROJECT_ID=dummy
+GEMINI_LOCATION=asia-northeast1
+GEMINI_MODEL_NAME=gemini-1.5-flash-002
