--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ build/
 
 ### Tailwind CSS ###
 **/src/main/**/css/tailwind.css
+
+### Google Application Credentials ###
+.credentials/*
+!.credentials/.gitkeep
