E2Eテスト用に初期データを挿入するSQLスクリプトを追加
E2Eテスト用に初期データを挿入するSQLスクリプトを追加し、docker-compose設定を更新しました。また、新たにE2E用のnpmスクリプトを追加し、READMEに使用手順を追記しました。

--- a/docker/docker-compose.e2e.yml
+++ b/docker/docker-compose.e2e.yml
@@ -1,5 +1,10 @@
 services:
+  postgresql:
+    container_name: postgresql-e2e
+    volumes:
+      - ../e2e/seeds/99-seeds.sql:/docker-entrypoint-initdb.d/99-seeds.sql
   app:
+    container_name: app-e2e
     networks:
       default:
         aliases:
