--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# Common
-SITE_URL=http://localhost:8080
-
 # Postgresql
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
@@ -8,15 +5,9 @@ POSTGRES_DB=tabisketch
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-# Mail
+# GMail
 GMAIL_USERNAME=tabisketch.official@gmail.com
 GMAIL_PASSWORD=dummy
 
 # Google
-GOOGLE_APPLICATION_CREDENTIALS=.credentials/dummy.json
-GOOGLE_MAPS_API_KEY=dummy
-
-# Gemini
-GEMINI_PROJECT_ID=dummy
-GEMINI_LOCATION=asia-northeast1
-GEMINI_MODEL_NAME=gemini-1.5-flash-002
+GOOGLE_MAPS_PLATFORM_API_KEY=dummy
