auto_assign.ymlを更新

--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -3,9 +3,6 @@ name: Auto Assign
 on:
   pull_request:
 
-env:
-  GH_TOKEN: ${{ github.token }}
-
 jobs:
   assign:
     runs-on: ubuntu-latest
@@ -15,4 +12,8 @@ jobs:
       repository-projects: read
 
     steps:
-      - run: gh pr edit ${{ github.event.number }} --add-assignee ${{ github.actor }}
+      - name: add assignee
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
+        run: gh pr edit ${{ github.event.number }} --add-assignee ${{ github.actor }}
