--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # GoogleMapAPI
-google.maps.api.key=${GOOGLE_MAPS_API_KEY}
+google-maps-platform-api-key=${GOOGLE_MAPS_PLATFORM_API_KEY}
